--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,9 @@
 	<classpathentry kind="src" output="target/test-classes" path="src/test/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="con" path="org.maven.ide.eclipse.MAVEN2_CLASSPATH_CONTAINER"/>
+	<classpathentry kind="lib" path="D:/Development/JarLibraries/craftbukkit-0.0.1-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="D:/Development/JarLibraries/WorldEdit.jar"/>
+	<classpathentry kind="lib" path="D:/Development/JarLibraries/iConomy.jar"/>
+	<classpathentry kind="lib" path="D:/Development/JarLibraries/Permissions.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
