Lots and lots of new stuff

--- a/plugin.yml
+++ b/plugin.yml
@@ -2,6 +2,6 @@ name: RageMod
 main: net.rageland.ragemod.RageMod
 version: 0.1
 commands:
-  basic:
+  town:
     description: N/A
-    usage: /basic
+    usage: /town
